[#1650] buttons dont have backgrounds, filters contain operation name, various css changes throughout

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/app-bar.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/app-bar.css
@@ -6,6 +6,11 @@
   z-index: 1;
 }
 
+/* Theme button */
+.app-bar__theme-button {
+	background: 0;
+}
+
 /* Container */
 .app-bar__container {
   padding-left: var(--lumo-space-r-l);
