--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
@@ -24,6 +24,7 @@
 }
 
 .dynamic-filtergroup {
+	flex-wrap: wrap;
 	flex-direction: row;
 	display: flex;
     justify-content: flex-start;
@@ -118,4 +119,8 @@
 
 .filters-group-layout {
 	flex-wrap: wrap;
+}
+
+.filter-grid-layout {
+	overflow: auto;
 }
