--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
@@ -53,7 +53,6 @@
 
 .dynamic-filter-onefield {
 	width: 12em;
-	margin-right: 4px;
 }
 
 .close-button {
@@ -66,7 +65,7 @@
 }
 
 .filter-row {
-	margin-left: 5px;
+	
 }
 
 .filterselector-layout vaadin-details::part(content) {
@@ -101,6 +100,8 @@
 
 .filter-layout {
 	flex-direction: column;
+	padding-left: 5px;
+    padding-right: 5px;
 }
 
 .icon-layout {
@@ -119,4 +120,12 @@
 
 .filters-group-layout {
 	flex-wrap: wrap;
+}
+
+.dynamic-filter-combobox {
+	width: 100%;
+}
+
+.filtermeta-layout label {
+	margin-top: 8px;
 }
