[#1815] added DatePicker operation and minor css tweaking

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
@@ -129,3 +129,12 @@
 .filtermeta-layout label {
 	margin-top: 8px;
 }
+
+.dynamic-filter-date {
+	min-width: 670px;
+	justify-content: space-between;
+}
+
+.dynamic-filter-multi vaadin-custom-field {
+	width: 100%;
+}
