[#1825] Date type filters now support two types of operations, and they're swtichable by clicking on the operation label

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
@@ -138,3 +138,16 @@
 .dynamic-filter-multi vaadin-custom-field {
 	width: 100%;
 }
+
+vaadin-date-time-picker-date-picker {
+	max-width: 140px;
+}
+
+vaadin-date-time-picker-time-picker {
+	max-width: 90px;
+}
+
+.dynamic-filter-date-time {
+	min-width: 480px;
+    justify-content: space-between;
+}
