[#1911] the option to add subGroups now exists, subGroups are selectable, and added filters are automatically assigned to the selected subroups

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
@@ -151,3 +151,11 @@ vaadin-date-time-picker-time-picker {
 	min-width: 480px;
     justify-content: space-between;
 }
+
+.active-group {
+	background-color: var(--lumo-primary-color-10pct);
+}
+
+.filtergroup.sub-group {
+    margin: 15px;
+}
