--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/details-drawer.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/details-drawer.css
@@ -16,6 +16,26 @@
   flex-shrink: 0;
 }
 
+.details-drawer-header {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  box-shadow: inset 0 -1px var(--lumo-contrast-10pct);
+}
+
+.details-drawer-header__wrapper {
+  display: flex;
+  align-items: center;
+  padding-left: var(--lumo-space-resp-l);
+  padding-right: var(--lumo-space-resp-l);
+  padding-top: var(--lumo-space-m);
+  padding-bottom: var(--lumo-space-m);
+}
+
+.details-drawer-header__wrapper > *:not(:last-child) {
+  margin-right: var(--lumo-space-l);
+}
+
 .details-drawer__header vaadin-tabs {
   box-shadow: none;
 }
@@ -29,6 +49,22 @@
 .details-drawer__footer {
   flex-shrink: 0;
 }
+
+.details-drawer-footer {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  background-color: var(--lumo-contrast-5pct);
+  padding-left: var(--lumo-space-resp-l);
+  padding-right: var(--lumo-space-resp-l);
+  padding-top: var(--lumo-space-s);
+  padding-bottom: var(--lumo-space-s);
+}
+
+.details-drawer-footer > *:not(:last-child) {
+  margin-right: var(--lumo-space-l);
+}
+
 
 @media(max-width: 719px) {
   .details-drawer {
