--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/styles.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/styles.css
@@ -1,4 +1,5 @@
 :root {
+  /* MainView, AppBar, Navi properties */
   --app-bar-height: var(--lumo-size-xl);
 
   --navi-drawer-width: calc(var(--lumo-size-m) * 7);
@@ -11,40 +12,6 @@
   --transition-duration-m: 240ms;
   --transition-duration-l: 320ms;
 
-  /* Responsive sizing and spacing */
-  --lumo-space-r-m: var(--lumo-space-m);
-  --lumo-space-r-l: var(--lumo-space-l);
-  --lumo-space-r-x: var(--lumo-space-l);
-  --lumo-space-wide-r-m: var(--lumo-space-wide-m);
-  --lumo-space-wide-r-l: var(--lumo-space-wide-l);
-}
-
-@media (max-width: 479px) {
-  :root {
-    --lumo-space-r-x: 0;
-  }
-}
-
-@media (min-width: 480px) and (max-width: 1023px) {
-  :root {
-    --lumo-space-r-x: var(--lumo-space-m);
-  }
-}
-
-@media (max-width: 1023px) {
-  :root {
-    --lumo-space-r-m: var(--lumo-space-s);
-    --lumo-space-r-l: var(--lumo-space-m);
-    --lumo-space-wide-r-m: var(--lumo-space-wide-s);
-    --lumo-space-wide-r-l: var(--lumo-space-wide-m);
-  }
-}
-
-html,
-body {
-  height: 100%;
-  overflow: hidden;
-  width: 100%;
 }
 
 .root {
@@ -56,30 +23,3 @@ body {
   z-index: 3;
 }
 
-vaadin-grid-cell-content {
-  text-overflow: ellipsis;
-}
-
-vaadin-text-field {
-  align-self: auto;
-}
-
-.stat-chart {
-    margin: 0em;
-    padding: 0em;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: var(--lumo-border-radius);
-    box-shadow: .25em .25em .25em 0px rgba(0, 0, 0, 0.3);
-    background-color: var(--lumo-base-color)
-}
-
-.statgrid-header,
-.statgrid-sum,
-.statgrid-sumvalue {
-	font-weight: bold;
-	font-size: var(--lumo-font-size-s);
-}
-
-vaadin-grid-cell-content vaadin-checkbox {
-    width: 100%;
-}
