--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/virtual-keyboard.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/virtual-keyboard.css
@@ -1,3 +1,14 @@
 .virtual-keyboard-wrapper {
 	flex-direction: column;
 }
+
+.virtual-keyboard-working-textfield {
+	width: 100%;
+	margin-left: 15px;
+    margin-right: 15px;
+}
+
+.virtual-keyboard-buttonlayout {
+	width: 100%;
+	justify-content: space-evenly;
+}
