[#3896] move approval-common.css to platform as sb4-page.css (hero)

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
@@ -7,7 +7,7 @@
 .sb4-page1-header {
 	display: flex;
 	background-color: var(--lumo-primary-color);
-    background-image: url(images/docu/hero_bg.png);
+    background-image: url(images/hero_bg.png);
     background-repeat: repeat;
     background-position-y: center;
     height: 280px;
