[#4145] removed wonky font

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
@@ -78,7 +78,7 @@
 }
 
 .sb4-page1-header-progress-active {
-    font-family: Roboto;
+    /*font-family: Roboto; why is this necessary?*/
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
@@ -101,7 +101,7 @@
 
 .sb4-page1-header-progress-inactive {
 
-    font-family: Roboto;
+    /*font-family: Roboto; why is this necessary?*/
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
