[#4145] changed header margin

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
@@ -141,7 +141,8 @@
 
 .sb4-page1-cards {
     margin-top: auto;
-    margin-bottom: -88px;
+    /*margin-bottom: -88px; this is not responsive for different screen sizes*/
+    margin-top: 3%;
     
 }
 
