--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
@@ -17,7 +17,7 @@
 }
 
 .sb4-page1-header-title {
-    flex-direction: column;
+    /* flex-direction: column; */
     margin-top: 2%;
     align-items: center;
     justify-content: center;
@@ -155,8 +155,8 @@
     margin-left: var(--lumo-space-m);
     margin-right: var(--lumo-space-m);
     flex-direction: column;
-    width: 203px;
-    height: 170px;
+    width: 100%;
+    height: 100%;
     align-items: center;
     
 }
