[#4228] made some major changes, parent-child relations are now referential, util class now handles mappings

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -49,6 +49,7 @@
 
 .visible-widget-view-value-label {
 	margin-left: 10px;
+	margin-right: 10px;
 	color: var(--lumo-primary-text-color);
 }
 
@@ -61,3 +62,10 @@
 	box-shadow: 0 2px 22px rgb(81 92 255 / 71%);
 }
 
+.text-dialog-layout {
+	flex-direction: column;
+}
+
+.text-dialog-button-layout {
+	justify-content: space-between;
+}
