[#4337] added integer dialog, and made changes to the model, thus a node's children are now node instances, and only the parent is contained as a reference

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -69,3 +69,11 @@
 .text-dialog-button-layout {
 	justify-content: space-between;
 }
+
+.integer-dialog-layout {
+	flex-direction: column;
+}
+
+.integer-dialog-button-layuot {
+	justify-content: space-between;
+}
