[#4337] added the back stepping funcionality, active nodes are now visually represented, visible widgets are now selectable with mouse

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -41,6 +41,7 @@
     border-radius: 8px;
     margin: 5px;
     align-items: center;
+    border: medium solid transparent;
 }
 
 .visible-widget-view-label {
@@ -76,4 +77,8 @@
 
 .integer-dialog-button-layuot {
 	justify-content: space-between;
+}
+
+.selected-widget-view {
+	border-color: var(--lumo-primary-text-color);
 }
