[#4228] added a some new widget types, and visible widgets are now editable

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -79,6 +79,14 @@
 	justify-content: space-between;
 }
 
+.double-dialog-layout {
+	flex-direction: column;
+}
+
+.double-dialog-button-layuot {
+	justify-content: space-between;
+}
+
 .selected-widget-view {
 	border-color: var(--lumo-primary-text-color);
 }
