[#4337] minor refactor and css changes

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -119,7 +119,15 @@
 	flex-direction: column;
 }
 
-.combobox-dialog-button-layout{
+.combobox-dialog-button-layout {
 	justify-content: space-between;
+}
+
+.container-dialog-button-layout {
+	justify-content: space-between;
+}
+
+.container-dialog-layout {
+	flex-direction: column;
 }
 
