[#4337] the values on visible widgets are now presented and passed as layouts instead of strings

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -60,6 +60,15 @@
 	color: var(--lumo-primary-text-color);
 }
 
+.visible-widget-view-value-layout {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.visible-widget-view-value-layout > label {
+	color: var(--lumo-primary-text-color);
+}
+
 .visible-widget-view-icon {
 	margin-left: 10px;
 	color: var(--lumo-primary-text-color);
