--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -48,6 +48,7 @@
 .visible-widget-container-view {
 	background-color: var(--lumo-contrast-10pct);
 	flex-wrap: wrap;
+	border: medium solid transparent;
 }
 
 .visible-widget-view-label {
@@ -111,6 +112,10 @@
 }
 
 .selected-widget-view {
+	border-color: var(--lumo-primary-text-color);
+}
+
+.selected-widget-container-view {
 	border-color: var(--lumo-primary-text-color);
 }
 
