--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -51,6 +51,13 @@
 	border: medium solid transparent;
 }
 
+.visible-widget-table-view {
+	background-color: var(--lumo-contrast-10pct);
+	flex-wrap: wrap;
+	border: medium solid transparent;
+	flex-direction: column;
+}
+
 .visible-widget-view-label {
 	margin-left: 10px;
 }
@@ -148,6 +155,14 @@
 }
 
 .container-dialog-layout {
+	flex-direction: column;
+}
+
+.widget-hidden {
+	visibility: hidden;
+}
+
+.visible-widget-drawer-layout {
 	flex-direction: column;
 }
 
