[#4466] added value layouts to the widget instance views inside the table widget, dialog doesnt open automatically when selecting a table widget, and minor css modifications

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/predictiveform/predictive-form.css
@@ -179,3 +179,13 @@
 	flex-direction: column;
 }
 
+.visible-widget-interactive-edit-button {
+	position: fixed;
+	right: 1%;
+}
+
+.visible-widget-view > .double-dialog-layout {
+	position: fixed;
+	right: 5%;
+}
+
