[#5487] IconButton styling (label word wrap)

--- a/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
+++ b/ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/sb4-page1.css
@@ -229,3 +229,12 @@
 /* TODO: upload  */
 /* TODO: task-grid-components, other grid components  */
 
+.sb4-iconbutton {
+	width: 150px;
+	height: 150px;
+	margin-right: var(--lumo-space-m);
+}
+
+.sb4-iconbutton-label {
+    white-space: initial;
+}
