--- a/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
+++ b/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
@@ -1,10 +1,13 @@
-<div [ngClass]="toolbar.direction === toolbarDirection.ROW ? 'row' : 'col'">
-  <button
-    mat-raised-button
-    *ngFor="let button of toolbar.buttons"
-    (click)="button.btnAction()"
-    [ngClass]="button.btnStyle"
-  >
-    {{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
-  </button>
+<div
+	class="button-container"
+	[ngClass]="toolbar.direction === toolbarDirection.ROW ? 'row' : 'col'"
+>
+	<button
+		mat-raised-button
+		*ngFor="let button of toolbar.buttons"
+		(click)="button.btnAction()"
+		[ngClass]="button.btnStyle"
+	>
+		{{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
+	</button>
 </div>
