--- a/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.css
+++ b/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.css
@@ -1,37 +1,42 @@
-.button-container{
-	background-color: transparent;
+.button-container {
+    background-color: transparent;
 }
 
 .col {
-	display: flex;
-	flex-direction: column;
-	padding: 1em;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
 }
 
 .row {
-	display: flex;
-	flex-wrap: row;
-	padding: 1em;
+    display: flex;
+    flex-wrap: row;
+    padding: 1em;
 }
 
 .tree-toolbar-btn {
-	color: white;
-	border-radius: 6px;
-	background-color: #1B5498;
-	margin: 1em;
+    color: white;
+    border-radius: 6px;
+    /* TODO: material-ui css változóból kapja az értékét! */
+    background-color: #1b5498;
+    margin: 1em;
 }
 
 .document-details-dark-btn {
-	color: white;
-	border-radius: 6px;
-	background-color: #0C2645;
-	margin: 1em;
+    color: white;
+    border-radius: 6px;
+    /* TODO: material-ui css változóból kapja az értékét! */
+    background-color: #0c2645;
+    margin: 1em;
 }
 
 .document-details-light-btn {
-	color: #0C2645;
-	border-radius: 6px;
-	background-color: #FFFFFF;
-	margin: 1em;
-	border: 1px solid #0C2645;
+    /* TODO: material-ui css változóból kapja az értékét! */
+    color: #0c2645;
+    border-radius: 6px;
+    /* TODO: material-ui css változóból kapja az értékét! */
+    background-color: #ffffff;
+    margin: 1em;
+    /* TODO: material-ui css változóból kapja az értékét! */
+    border: 1px solid #0c2645;
 }
